fix layout bug

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -49,7 +49,7 @@ body{
 #heatmap_Legend_Label4{
     font-family: "Poppins"
 }
-.chart-area{
+#doughnutCharts{
     display: flex;
     justify-content: space-around;
 }
